Bugfix for playback modal layout on ios devices
The content of th eplayback modal now takes up the entire space of the modal

--- a/src/Assets/Styles/Components/Playback/playback-modal.scss
+++ b/src/Assets/Styles/Components/Playback/playback-modal.scss
@@ -5,6 +5,7 @@
   justify-content: space-evenly;
   width: 100%;
   height: 100%;
+  flex: 1;
 
   p {
     text-align: center;
